contec_hacking/research/additional_samples/Additional sample program  Analog Input Repeat Ver.1.00/AiRepeat/Sample/jp/Vc2013/AiRepeat/Caio.h


long WINAPI AioStartAiSync(short Id, long TimeOut);

long WINAPI AioStopAi(short Id);

long WINAPI AioGetAiStatus(short Id, long * AiStatus);

long WINAPI AioGetAiSamplingCount(short Id, long * AiSamplingCount);

long WINAPI AioGetAiStopTriggerCount(short Id, long * AiStopTriggerCount);

long WINAPI AioGetAiTransferCount(short Id, long *AiTransferCount);

long WINAPI AioGetAiTransferLap(short Id, long *Lap);

long WINAPI AioGetAiRepeatCount(short Id, long * AiRepeatCount);

long WINAPI AioGetAiSamplingData(short Id, long * AiSamplingTimes, long * AiData);

long WINAPI AioGetAiSamplingDataEx(short Id, long * AiSamplingTimes, float * AiData);

long WINAPI AioResetAiStatus(short Id);

long WINAPI AioResetAiMemory(short Id);

long WINAPI AioSetAiDigitalFilter(short Id, short AiChannel, short FilterType, short FilterValue);

long WINAPI AioGetAiDigitalFilter(short Id, short AiChannel, short *FilterType, short *FilterValue);


//アナログ出力関数
long WINAPI AioSingleAo(short Id, short AoChannel, long AoData);

long WINAPI AioSingleAoEx(short Id, short AoChannel, float AoData);

long WINAPI AioMultiAo(short Id, short AoChannels, long * AoData);

long WINAPI AioMultiAoEx(short Id, short AoChannels, float * AoData);

long WINAPI AioGetAoResolution(short Id, short * AoResolution);

long WINAPI AioSetAoChannels(short Id, short AoChannels);

long WINAPI AioGetAoChannels(short Id, short * AoChannels);

long WINAPI AioGetAoMaxChannels(short Id, short * AoMaxChannels);

long WINAPI AioSetAoRange(short Id, short AoChannel, short AoRange);

long WINAPI AioSetAoRangeAll(short Id, short AoRange);

long WINAPI AioGetAoRange(short Id, short AoChannel, short * AoRange);

long WINAPI AioSetAoTransferMode(short Id, short AoTransferMode);

long WINAPI AioGetAoTransferMode(short Id, short *AoTransferMode);

long WINAPI AioSetAoDeviceBufferMode(short Id, short AoDeviceBufferMode);

long WINAPI AioGetAoDeviceBufferMode(short Id, short *AoDeviceBufferMode);

long WINAPI AioSetAoMemorySize(short Id, long AoMemorySize);

long WINAPI AioGetAoMemorySize(short Id, long *AoMemorySize);

long WINAPI AioSetAoTransferData(short Id, long DataNumber, long *Buffer);

long WINAPI AioGetAoSamplingDataSize(short Id, short *DataSize);

long WINAPI AioSetAoMemoryType(short Id, short AoMemoryType);

long WINAPI AioGetAoMemoryType(short Id, short * AoMemoryType);

long WINAPI AioSetAoRepeatTimes(short Id, long AoRepeatTimes);

long WINAPI AioGetAoRepeatTimes(short Id, long * AoRepeatTimes);

long WINAPI AioSetAoClockType(short Id, short AoClockType);

long WINAPI AioGetAoClockType(short Id, short * AoClockType);

long WINAPI AioSetAoSamplingClock(short Id, float AoSamplingClock);

long WINAPI AioGetAoSamplingClock(short Id, float * AoSamplingClock);

long WINAPI AioSetAoClockEdge(short Id, short AoClockEdge);

long WINAPI AioGetAoClockEdge(short Id, short * AoClockEdge);

long WINAPI AioSetAoSamplingData(short Id, long AoSamplingTimes, long * AoData);

long WINAPI AioSetAoSamplingDataEx(short Id, long AoSamplingTimes, float * AoData);

long WINAPI AioGetAoSamplingTimes(short Id, long * AoSamplingTimes);

long WINAPI AioSetAoStartTrigger(short Id, short AoStartTrigger);

long WINAPI AioGetAoStartTrigger(short Id, short * AoStartTrigger);

long WINAPI AioSetAoStopTrigger(short Id, short AoStopTrigger);

long WINAPI AioGetAoStopTrigger(short Id, short * AoStopTrigger);

long WINAPI AioSetAoEvent(short Id, HWND hWnd, long AoEvent);

long WINAPI AioGetAoEvent(short Id, HWND * hWnd, long * AoEvent);

long WINAPI AioSetAoCallBackProc(short Id,
	long (_stdcall *pProc)(short Id, short AiEvent, WPARAM wParam, LPARAM lParam, void *Param), long AoEvent, void *Param);

long WINAPI AioSetAoEventSamplingTimes(short Id, long AoSamplingTimes);

long WINAPI AioGetAoEventSamplingTimes(short Id, long * AoSamplingTimes);

long WINAPI AioSetAoEventTransferTimes(short Id, long AoTransferTimes);

long WINAPI AioGetAoEventTransferTimes(short Id, long *AoTransferTimes);

long WINAPI AioStartAo(short Id);

long WINAPI AioStopAo(short Id);

long WINAPI AioEnableAo(short Id, short AoChannel);

long WINAPI AioDisableAo(short Id, short AoChannel);

long WINAPI AioGetAoStatus(short Id, long * AoStatus);

long WINAPI AioGetAoSamplingCount(short Id, long * AoSamplingCount);

long WINAPI AioGetAoTransferCount(short Id, long *AoTransferCount);

long WINAPI AioGetAoTransferLap(short Id, long *Lap);

long WINAPI AioGetAoRepeatCount(short Id, long * AoRepeatCount);

long WINAPI AioResetAoStatus(short Id);

long WINAPI AioResetAoMemory(short Id);


//デジタル入出力関数
long WINAPI AioSetDiFilter(short Id, short Bit, float Value);

long WINAPI AioGetDiFilter(short Id, short Bit, float *Value);

long WINAPI AioInputDiBit(short Id, short DiBit, short * DiData);

long WINAPI AioOutputDoBit(short Id, short DoBit, short DoData);

long WINAPI AioInputDiByte(short Id, short DiPort, short * DiData);

long WINAPI AioOutputDoByte(short Id, short DoPort, short DoData);

long WINAPI AioSetDioDirection(short Id, long Dir);

long WINAPI AioGetDioDirection (short Id, long * Dir);


//カウンタ関数
long WINAPI AioGetCntMaxChannels(short Id, short * CntMaxChannels);

long WINAPI AioSetCntComparisonMode(short Id, short CntChannel, short CntMode);

long WINAPI AioGetCntComparisonMode(short Id, short CntChannel, short *CntMode);

long WINAPI AioSetCntPresetReg(short Id, short CntChannel, long PresetNumber, long *PresetData, short Flag);

long WINAPI AioSetCntComparisonReg(short Id, short CntChannel, long ComparisonNumber, long *ComparisonData, short Flag);

long WINAPI AioSetCntInputSignal(short Id, short CntChannel, short CntInputSignal);

long WINAPI AioGetCntInputSignal(short Id, short CntChannel, short *CntInputSignal);

long WINAPI AioSetCntEvent(short Id, short CntChannel, HWND hWnd, long CntEvent);

long WINAPI AioGetCntEvent(short Id, short CntChannel, HWND *hWnd, long *CntEvent);

long WINAPI AioSetCntCallBackProc(short Id, short CntChannel,
	long (_stdcall *pProc)(short Id, short CntEvent, WPARAM wParam, LPARAM lParam, void *Param), long CntEvent, void *Param);

long WINAPI AioSetCntFilter(short Id, short CntChannel, short Signal, float Value);

long WINAPI AioGetCntFilter(short Id, short CntChannel, short Signal, float *Value);

long WINAPI AioStartCnt(short Id, short CntChannel);

long WINAPI AioStopCnt(short Id, short CntChannel);

long WINAPI AioPresetCnt(short Id, short CntChannel, long PresetData);

long WINAPI AioGetCntStatus(short Id, short CntChannel, long *CntStatus);

long WINAPI AioGetCntCount(short Id, short CntChannel, long *Count);

long WINAPI AioResetCntStatus(short Id, short CntChannel, long CntStatus);