contec_hacking/research/additional_samples/Additional sample program  Analog Input Repeat Ver.1.00/AiRepeat/Sample/eng/VbNet2013/AiRepeat/Caio.vb

	Declare Function AioStartAiSync Lib "CAIO.DLL" (ByVal Id As Short, ByVal TimeOut As Integer) As Integer
	Declare Function AioStopAi Lib "CAIO.DLL" (ByVal Id As Short) As Integer
	Declare Function AioGetAiStatus Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiStatus As Integer) As Integer
	Declare Function AioGetAiSamplingCount Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiSamplingCount As Integer) As Integer
	Declare Function AioGetAiRepeatCount Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiRepeatCount As Integer) As Integer
	Declare Function AioGetAiStopTriggerCount Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiStopTriggerCount As Integer) As Integer
	Declare Function AioGetAiTransferCount Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiTransferCount As Integer) As Integer
	Declare Function AioGetAiTransferLap Lib "CAIO.DLL" (ByVal Id As Short, ByRef Lap As Integer) As Integer
	Declare Function AioGetAiSamplingData Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiSamplingTimes As Integer, <MarshalAs(UnmanagedType.LPArray)> ByVal AiData() As Integer) As Integer
	Declare Function AioGetAiSamplingDataEx Lib "CAIO.DLL" (ByVal Id As Short, ByRef AiSamplingTimes As Integer, <MarshalAs(UnmanagedType.LPArray)> ByVal AiData() As Single) As Integer
	Declare Function AioResetAiStatus Lib "CAIO.DLL" (ByVal Id As Short) As Integer
	Declare Function AioResetAiMemory Lib "CAIO.DLL" (ByVal Id As Short) As Integer
    Declare Function AioSetAiDigitalFilter Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByVal FilterType As Short, ByVal FilterValue As Short) As Integer
    Declare Function AioGetAiDigitalFilter Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiChannel As Short, ByRef FilterType As Short, ByRef FilterValue As Short) As Integer
	
	'Analog Output Function
	Declare Function AioSingleAo Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoChannel As Short, ByVal AoData As Integer) As Integer
	Declare Function AioSingleAoEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoChannel As Short, ByVal AoData As Single) As Integer
	Declare Function AioMultiAo Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoChannels As Short, <MarshalAs(UnmanagedType.LPArray)> ByVal AoData() As Integer) As Integer
	Declare Function AioMultiAoEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoChannels As Short, <MarshalAs(UnmanagedType.LPArray)> ByVal AoData() As Single) As Integer
	Declare Function AioGetAoResolution Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoResolution As Short) As Integer
	Declare Function AioSetAoChannels Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoChannels As Short) As Integer
	Declare Function AioGetAoChannels Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoChannels As Short) As Integer
	Declare Function AioGetAoMaxChannels Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoMaxChannels As Short) As Integer
	Declare Function AioSetAoRange Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoChannel As Short, ByVal AoRange As Short) As Integer
	Declare Function AioSetAoRangeAll Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoRange As Short) As Integer
	Declare Function AioGetAoRange Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoChannel As Short, ByRef AoRange As Short) As Integer
	Declare Function AioSetAoTransferMode Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoTransferMode As Short) As Integer
	Declare Function AioGetAoTransferMode Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoTransferMode As Short) As Integer
	Declare Function AioSetAoDeviceBufferMode Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoDeviceBufferMode As Short) As Integer
	Declare Function AioGetAoDeviceBufferMode Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoDeviceBufferMode As Short) As Integer
	Declare Function AioSetAoMemorySize Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoMemorySize As Integer) As Integer
	Declare Function AioGetAoMemorySize Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoMemorySize As Integer) As Integer
	Declare Function AioSetAoTransferData Lib "CAIO.DLL" (ByVal Id As Short, ByVal DataNumber As Integer, ByVal Buffer As IntPtr) As Integer
	Declare Function AioGetAoSamplingDataSize Lib "CAIO.DLL" (ByVal Id As Short, ByRef DataSize As Short) As Integer
	Declare Function AioSetAoMemoryType Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoMemoryType As Short) As Integer
	Declare Function AioGetAoMemoryType Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoMemoryType As Short) As Integer
	Declare Function AioSetAoRepeatTimes Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoRepeatTimes As Integer) As Integer
	Declare Function AioGetAoRepeatTimes Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoRepeatTimes As Integer) As Integer
	Declare Function AioSetAoClockType Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoClockType As Short) As Integer
	Declare Function AioGetAoClockType Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoClockType As Short) As Integer
	Declare Function AioSetAoSamplingClock Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoSamplingClock As Single) As Integer
	Declare Function AioGetAoSamplingClock Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoSamplingClock As Single) As Integer
	Declare Function AioSetAoClockEdge Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoClockEdge As Short) As Integer
	Declare Function AioGetAoClockEdge Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoClockEdge As Short) As Integer
	Declare Function AioSetAoSamplingData Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoSamplingTimes As Integer, <MarshalAs(UnmanagedType.LPArray)> ByVal AoData() As Integer) As Integer
	Declare Function AioSetAoSamplingDataEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoSamplingTimes As Integer, <MarshalAs(UnmanagedType.LPArray)> ByVal AoData() As Single) As Integer
	Declare Function AioGetAoSamplingTimes Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoSamplingTimes As Integer) As Integer
	Declare Function AioSetAoStartTrigger Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoStartTrigger As Short) As Integer
	Declare Function AioGetAoStartTrigger Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoStartTrigger As Short) As Integer
	Declare Function AioSetAoStopTrigger Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoStopTrigger As Short) As Integer
	Declare Function AioGetAoStopTrigger Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoStopTrigger As Short) As Integer
	Declare Function AioSetAoEvent Lib "CAIO.DLL" (ByVal Id As Short, ByVal hWnd As Integer, ByVal AoEvent As Integer) As Integer
	Declare Function AioGetAoEvent Lib "CAIO.DLL" (ByVal Id As Short, ByRef hWnd As Integer, ByRef AoEvent As Integer) As Integer
    Declare Function AioSetAoCallBackProc Lib "CAIO.DLL" (ByVal Id As Short, ByVal PAOCALLBACK As IntPtr, ByVal AoEvent As Integer, ByVal Param As IntPtr) As Integer
	Declare Function AioSetAoEventSamplingTimes Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoSamplingTimes As Integer) As Integer
	Declare Function AioGetAoEventSamplingTimes Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoSamplingTimes As Integer) As Integer
	Declare Function AioSetAoEventTransferTimes Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoTransferTimes As Integer) As Integer
	Declare Function AioGetAoEventTransferTimes Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoTransferTimes As Integer) As Integer
	Declare Function AioStartAo Lib "CAIO.DLL" (ByVal Id As Short) As Integer
	Declare Function AioStopAo Lib "CAIO.DLL" (ByVal Id As Short) As Integer
	Declare Function AioEnableAo Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoChannel As Short) As Integer
	Declare Function AioDisableAo Lib "CAIO.DLL" (ByVal Id As Short, ByVal AoChannel As Short) As Integer
	Declare Function AioGetAoStatus Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoStatus As Integer) As Integer
	Declare Function AioGetAoSamplingCount Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoSamplingCount As Integer) As Integer
	Declare Function AioGetAoTransferCount Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoTransferCount As Integer) As Integer
	Declare Function AioGetAoTransferLap Lib "CAIO.DLL" (ByVal Id As Short, ByRef Lap As Integer) As Integer
	Declare Function AioGetAoRepeatCount Lib "CAIO.DLL" (ByVal Id As Short, ByRef AoRepeatCount As Integer) As Integer
	Declare Function AioResetAoStatus Lib "CAIO.DLL" (ByVal Id As Short) As Integer
	Declare Function AioResetAoMemory Lib "CAIO.DLL" (ByVal Id As Short) As Integer
	
	'Digital Input and Output Function
	Declare Function AioSetDiFilter Lib "CAIO.DLL" (ByVal Id As Short, ByVal Bit As Short, ByVal Value As Single) As Integer
	Declare Function AioGetDiFilter Lib "CAIO.DLL" (ByVal Id As Short, ByVal Bit As Short, ByRef Value As Single) As Integer
	Declare Function AioInputDiBit Lib "CAIO.DLL" (ByVal Id As Short, ByVal DiBit As Short, ByRef DiData As Short) As Integer
	Declare Function AioOutputDoBit Lib "CAIO.DLL" (ByVal Id As Short, ByVal DoBit As Short, ByVal DoData As Short) As Integer
	Declare Function AioInputDiByte Lib "CAIO.DLL" (ByVal Id As Short, ByVal DiPort As Short, ByRef DiData As Short) As Integer
	Declare Function AioOutputDoByte Lib "CAIO.DLL" (ByVal Id As Short, ByVal DoPort As Short, ByVal DoData As Short) As Integer
	Declare Function AioSetDioDirection Lib "CAIO.DLL" (ByVal Id As Short, ByVal DiPort As Integer) As Integer
	Declare Function AioGetDioDirection Lib "CAIO.DLL" (ByVal Id As Short, ByRef DoPort As Integer) As Integer

	'Counter Function
	Declare Function AioGetCntMaxChannels Lib "CAIO.DLL" (ByVal Id As Short, ByRef CntMaxChannels As Short) As Integer
	Declare Function AioSetCntComparisonMode Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByVal CntMode As Short) As Integer
	Declare Function AioGetCntComparisonMode Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByRef CntMode As Short) As Integer
	Declare Function AioSetCntPresetReg Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByVal PresetNumber As Integer, <MarshalAs(UnmanagedType.LPArray)> ByVal PresetData() As Integer, ByVal Flag As Short) As Integer
	Declare Function AioSetCntComparisonReg Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByVal ComparisonNumber As Integer, <MarshalAs(UnmanagedType.LPArray)> ByVal ComparisonData() As Integer, ByVal Flag As Short) As Integer
	Declare Function AioSetCntInputSignal Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByVal CntInputSignal As Short) As Integer
	Declare Function AioGetCntInputSignal Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByRef CntInputSignal As Short) As Integer
	Declare Function AioSetCntEvent Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByVal hWnd As Integer, ByVal CntEvent As Integer) As Integer
	Declare Function AioGetCntEvent Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByRef hWnd As Integer, ByRef CntEvent As Integer) As Integer
    Declare Function AioSetCntCallBackProc Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByVal PCNTCALLBACK As IntPtr, ByVal CntEvent As Integer, ByVal Param As IntPtr) As Integer
	Declare Function AioSetCntFilter Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByVal Signal As Short, ByVal Value As Single) As Integer
	Declare Function AioGetCntFilter Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByVal Signal As Short, ByRef Value As Single) As Integer
	Declare Function AioStartCnt Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short) As Integer
	Declare Function AioStopCnt Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short) As Integer
	Declare Function AioPresetCnt Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByVal PresetData As Integer) As Integer
	Declare Function AioGetCntStatus Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByRef CntStatus As Integer) As Integer
	Declare Function AioGetCntCount Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByRef Count As Integer) As Integer
	Declare Function AioResetCntStatus Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntChannel As Short, ByVal CntStatus As Integer) As Integer
